# serverless-treez

treez_notification/treez-notification/: .gitignore  docker-compose.yml  handler.py  package-lock.json  pyproject.toml  serverless.yml
