[tool.poetry]
name = "treez-notification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "treez_notification"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
urllib3 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
